<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">OMW</string>

    <string-array name="pref_encoding_entries">
        <item>Central and Eastern European (win1250)</item>
        <item>Cyrillic (win1251)</item>
        <item>Latin (win1252)</item>
    </string-array>

    <string-array name="pref_encoding_values">
        <item>win1250</item>
        <item>win1251</item>
        <item>win1252</item>
    </string-array>

    <string-array name="mipmapping_array">
        <item>trilinear</item>
        <item>bilinear</item>
    </string-array>

    <string-array name="resolution_entry">
        <item>Normal (1x)</item>
        <item>Double (2x)</item>
        <item>Half (0.5x)</item>
    </string-array>


    <string-array name="resolution_array">
        <item>normalResolution</item>
        <item>doubleResolution</item>
        <item>halfResolution</item>
    </string-array>

    <string name="general_settings">Setup</string>
    <string name="start_game_label">Start game</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="game_files">Game files</string>

    <!-- Graphics library -->
    <string name="pref_graphicsLibrary">Graphics library</string>
    <string name="pref_graphicsLibrary_default">gles1</string>
    <string name="pref_advanced">Advanced</string>
    <string name="pref_commandLine">Custom command line arguments</string>
    <string name="pref_ui">User interface</string>
    <string name="pref_gamma">Gamma</string>
    <string name="pref_uiScaling">GUI scaling factor</string>
    <string name="uiScaling_auto">Auto (%1$.2f)</string>
    <string name="pref_screen_keeper">Keep screen always on</string>
    <string name="pref_touchpadSensitivity">Virtual touchpad sensitivity</string>
    <string name="action_reset_config">Reset configuration files</string>
    <string name="action_reset_screen_controls">Reset on-screen controls</string>
    <string name="action_show_screen_controls">On-screen controls…</string>
    <string name="pref_hide_controls">Hide on-screen buttons</string>
    <string name="config_was_reset">Configuration was reset to default values</string>
    <string name="pref_lang">Language settings</string>
    <string name="pref_encoding">Game language</string>
    <string name="pref_encoding_default">win1252</string>
    <string name="btn_opacityPlus">Alpha+</string>
    <string name="btn_opacityMinus">Alpha-</string>
    <string name="btn_sizePlus">Size+</string>
    <string name="btn_sizeMinus">Size-</string>
    <string name="btn_resetControlsLayout">Reset to defaults</string>
    <string name="pref_physicsFPS">Physics FPS</string>

    <string-array name="pref_graphicsLibrary_entries">
        <item>GLESv1</item>
        <item>GLESv2</item>
    </string-array>

    <string-array name="pref_graphicsLibrary_values">
        <item>gles1</item>
        <item>gles2</item>
    </string-array>

    <string-array name="pref_physicsFPS_entries">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>

    <string name="pref_unsafe_state_graph">Enable unsafe graphics optimizations</string>
    <string-array name="pref_unsafe_state_graph_entries">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string-array name="pref_unsafe_state_graph_values">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string name="pref_unsafe_state_graph_default">false</string>

    <string name="pref_physicsFPS_default">15</string>

    <string name="pref_allowCapsuleShape">Force a simple collision box for actors</string>

    <!-- Oops. This has inverted true/false between entries and values -->
    <string-array name="pref_allowCapsuleShape_entries">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="pref_allowCapsuleShape_values">
        <item>false</item>
        <item>true</item>
    </string-array>

    <string name="pref_allowCapsuleShape_default">false</string>

    <string name="pref_preload">Preloading</string>
    <string-array name="pref_preload_entries">
        <item>Enabled</item>
        <item>Disabled</item>
    </string-array>
    <string-array name="pref_preload_values">
        <item>true</item>
        <item>false</item>
    </string-array>
    <string name="pref_preload_default">false</string>
    <string name="btn_back">Back</string>
    <string name="pref_customResolution">Custom resolution</string>
    <string name="mods">Mods…</string>
    <string name="action_about">About</string>

    <string name="about_title">About OMW</string>
    <string name="activity_mods">Mods</string>
    <string name="tab_plugins">Plugins</string>
    <string name="tab_resources">Resources</string>
    <string name="data_error_title">Error locating data files</string>
    <string name="data_error_message">Please select a directory which contains both the \"Morrowind.ini\" file and the \"Data Files\" directory.</string>
    <string name="permissions_error_title">No permissions</string>
    <string name="permissions_error_message">OMW needs storage permissions to locate and access Morrowind game files. Please grant this permission through settings.</string>
    <string name="ini_error_message">Failure transforming the configuration file. Please ensure your \"Morrowind.ini\" is well-formed.</string>

    <string name="no_data_files_title">Data files not found</string>
    <string name="no_data_files_message">You must copy Morrowind game files to your device and select the path under \"Game files\" before the game can be played.</string>
    <string name="category_performance">Performance</string>

    <string name="no_content_files_title">No content files!</string>
    <string name="no_content_files_message">There are no content files enabled. Before the game can run, you must activate at least one plugin file from the \"Mods…\" menu.</string>
    <string name="no_content_files_dismiss">Proceed anyway</string>

    <string name="configure_mods">Configure mods</string>

    <string name="pref_mouse_mode">Mouse mode in menus</string>
    <string-array name="pref_mouse_mode_entries">
        <item>Hybrid</item>
        <item>Relative joystick controls</item>
        <item>Absolute touch controls</item>
    </string-array>
    <string-array name="pref_mouse_mode_values">
        <item>hybrid</item>
        <item>joystick</item>
        <item>touch</item>
    </string-array>
    <string name="pref_mouse_mode_default">hybrid</string>

    <string name="bugsnag_yes">Yes</string>
    <string name="bugsnag_no">No</string>
    <string name="bugsnag_policy">Privacy policy</string>

    <string name="bugsnag_consent_title">Report crashes automatically?</string>
    <string name="bugsnag_consent_message">Would you like to enable automatic crash reporting?\nIf a crash occurs, some data about your device, configuration and installed mods will be automatically submitted to Bugsnag. You can find more information in the Privacy Policy.\nThis setting can be changed at any time from the menu.</string>

    <string name="bugsnag_consent_restart_title">Please restart the application</string>
    <string name="bugsnag_consent_restart_message">You must restart the application for these settings to come into effect.</string>
    <string name="action_bugsnag_consent">Crash reporting</string>

    <string name="dialog_howto">How To</string>

    <string name="no_browser_title">Unable to open a URL</string>
    <string name="no_browser_message">You don\'t appear to have a web browser installed. Tried to open the following URL:\n\n%1$s</string>
    <string name="pref_show_qp">Enable Quick Keys</string>
    <string name="pref_show_fn">Enable FN keys</string>
    <string name="pref_always_show_top_bar">Always show top-bar icons</string>

</resources>
