<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/controlsContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        >


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOpacityPlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_opacityPlus"
                android:onClick="clickOpacityPlus"
                />

            <Button
                android:id="@+id/btnOpacityMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_opacityMinus"
                android:onClick="clickOpacityMinus"
                />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnSizePlus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sizePlus"
                android:onClick="clickSizePlus"
                />

            <Button
                android:id="@+id/btnSizeMinus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sizeMinus"
                android:onClick="clickSizeMinus"
                />
        </LinearLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_resetControlsLayout"
            android:onClick="clickResetControls"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:onClick="clickBack"
            />


    </LinearLayout>

</RelativeLayout>
