<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:key="genereal_settings"
        android:title="General settings">

        <EditTextPreference
            android:key="data_files"
            android:title="@string/data_files"
            />

        <CheckBoxPreference
            android:key="hidecontrols"
            android:title="Hide onscreen buttons" />

        <CheckBoxPreference
            android:key="screen_keeper"
            android:summary="Keep screen always on"
            android:title="Screen" />


    </PreferenceCategory>


    <PreferenceCategory
        android:key="categ1anguage"
        android:title="Language settings">
        <ListPreference
            android:key="encoding"
            android:summary="Game language"
            android:title="Encoding"
            android:dialogTitle="Game language"
            android:entries="@array/encoding_entry"
            android:entryValues="@array/encoding_entry" />

        <CheckBoxPreference
            android:key="subtitiles"
            android:summary="Show subtitles"
            android:title="Subtitles" />


    </PreferenceCategory>


    <PreferenceCategory
        android:key="categ2"
        android:title="Screen Settings">
        <ListPreference
            android:key="mipmapping"
            android:summary="Mipmapping options"
            android:title="Mipmapping"
            android:dialogTitle="Mipmapping"
            android:entries="@array/mipmapping_array"
            android:entryValues="@array/mipmapping_array" />

        <ListPreference
            android:key="resolution"
            android:summary="Screen resolution"
            android:title="Resolution"
            android:dialogTitle="Screen resolution"
            android:entries="@array/resolution_entry"
            android:entryValues="@array/resolution_array" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_advanced">
        <ListPreference
            android:key="pref_graphicsLibrary"
            android:title="@string/pref_graphicsLibrary"
            android:dialogTitle="@string/pref_graphicsLibrary"
            android:entries="@array/pref_graphicsLibrary_entries"
            android:entryValues="@array/pref_graphicsLibrary_values"
            android:defaultValue="@string/pref_graphicsLibrary_default"
            android:summary="%s"
        />

    </PreferenceCategory>

</PreferenceScreen>
